Fix spacing on About

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @media (min-width: 768px) {
   .container {
-    max-width: 50%;
+    max-width: 45%;
   }
 }
 
@@ -47,14 +47,14 @@ p {
   vertical-align: top;
   width: 49%;
   display: inline-block;
-  padding-right: 30px;
+  padding-right: 35px;
 }
 
 .right {
   vertical-align: top;
-  width: 40%;
+  width: 50%;
   display: inline-block;
-  padding-left: 30px;
+  padding-left: 35px;
 }
 
 .title {
